--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -28,10 +28,16 @@
 <script>
     function getdat(dat,toppage) {
         let xhr = new XMLHttpRequest();
+
         let list = document.getElementById("thread_list")
 
         let key = dat.toString().split(".")[0]
         xhr.open('GET', "./dat/" + dat);
+        xhr.setRequestHeader('cache-control', 'no-cache, must-revalidate, post-check=0, pre-check=0');
+        xhr.setRequestHeader('cache-control', 'max-age=0');
+        xhr.setRequestHeader('expires', '0');
+        xhr.setRequestHeader('expires', 'Tue, 01 Jan 1980 1:00:00 GMT');
+        xhr.setRequestHeader('pragma', 'no-cache');
         xhr.onload = function () {
             let datas = xhr.responseText.split("\n")
             let thread = { "title": "", "res": [] }
