--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>適当な板</title>
+    <meta charset="Shift_JIS">
 </head>
 
 <body>
@@ -33,11 +34,6 @@
 
         let key = dat.toString().split(".")[0]
         xhr.open('GET', "./dat/" + dat, false);
-        xhr.setRequestHeader('cache-control', 'no-cache, must-revalidate, post-check=0, pre-check=0');
-        xhr.setRequestHeader('cache-control', 'max-age=0');
-        xhr.setRequestHeader('expires', '0');
-        xhr.setRequestHeader('expires', 'Tue, 01 Jan 1980 1:00:00 GMT');
-        xhr.setRequestHeader('pragma', 'no-cache');
         xhr.onload = function () {
             let datas = xhr.responseText.split("\n")
             let thread = { "title": "", "res": [] }
@@ -108,7 +104,6 @@
             let xhr = new XMLHttpRequest();
             let menu = document.getElementById("thread_menu")
             xhr.open('GET', './subject.txt');
-            xhr.send();
             xhr.onload = function () {
                 let datas = xhr.responseText.split("\n")
                 let threads = []
@@ -122,6 +117,7 @@
                     }
                 });
             };
+            xhr.send();
         }
     }
 </script>
