--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -78,7 +78,7 @@
         const bbs = location.pathname.split("/")[1]
         return `<div class="common">${key?"書き込み欄":"新規スレッド作成"}</div>
             <div style="margin: 0.5em 0 0 2em; font-size: 0.75em;">
-                <form method="POST" action="/test/bbs.cgi">
+                <form method="POST" action="/test/bbs.cgi" accept-charset="Shift-JIS">
                     <input type="submit" value="${key?"書き込み":"新規スレッド"}"><br>
                     ${!key?`スレッドタイトル：<input type="text" name="subject" style="width: 24em;"><br>`:""}
                     名前：<input type="text" name="FROM" style="width: 16em;"> E-mail：<input type="text" name="mail"
