bbsmenuを生成するように変更 URL関数追加 Baseurl追加

--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -75,7 +75,8 @@
         xhr.send();
     }
     function postarea(key){
-        const bbs = location.pathname.split("/")[1]
+        const spl = location.pathname.split("/")
+        const bbs = spl[spl.length-2]
         return `<div class="common">${key?"書き込み欄":"新規スレッド作成"}</div>
             <div style="margin: 0.5em 0 0 2em; font-size: 0.75em;">
                 <form method="POST" action="/test/bbs.cgi" accept-charset="Shift-JIS">
