--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -26,6 +26,7 @@
         </div>
         <a href="./"><b>ホーム</b></a>
     </div>
+    <div style="margin:2rem auto;width: fit-content;">Copyright:u-haru@u-haru.com All Rights Reserved</div>
 </body>
 <script>
     function getdat(dat,toppage) {
@@ -132,7 +133,6 @@
     body {
         background-image: url("./ba.gif");
         margin: 0;
-        padding-bottom: 10%;
     }
 
     .list {
