--- a/pkg/admin/index.html
+++ b/pkg/admin/index.html
@@ -357,11 +357,13 @@
         }
         html {
             scroll-behavior: smooth;
+            font-size: 62.5%;
         }
         body {
             /* background-image: url("./ba.gif"); */
             background-color: #dac6b7;
             margin: 0;
+            font-size: 1.6rem;
         }
         h1,h2,h3,h4,h5,h6 {
             white-space: nowrap;
@@ -434,7 +436,6 @@
             border-radius: 0.50em / 0.50em;
             background: #39F;
             color: #FFF;
-            font-size: 1.00em;
             display: inline-block;
         }
         .disabled {
