--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -4,6 +4,7 @@
     <title>適当な板</title>
     <meta charset="Shift_JIS">
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7258478194483080" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,13 +17,15 @@
             <h2 class="common" id="title"><script>document.getElementById("title").innerHTML = document.title</script></h2>
             <div class="menu" id="head">
                 <script>
-                let xhr = new XMLHttpRequest();
-                xhr.open('GET', "./head.txt");
-                xhr.onload = function () {
-                    document.getElementById("head").innerHTML = xhr.responseText
-                }
-                xhr.overrideMimeType('text/html; charset=Shift_JIS')
-                xhr.send();
+                    (function(){
+                        let xhr = new XMLHttpRequest();
+                        xhr.open('GET', "./head.txt");
+                        xhr.onload = function () {
+                            document.getElementById("head").innerHTML = xhr.responseText
+                        }
+                        xhr.overrideMimeType('text/html; charset=Shift_JIS')
+                        xhr.send();
+                    })()
                 </script>
             </div>
         </div>
@@ -31,14 +34,47 @@
             <div class="menu" id="thread_menu">
             </div>
         </div>
+        <div class="box foot disabled">
+            <div id="headad" style="margin: 0 auto;width: fit-content;"></div>
+            <script>
+                (function(){
+                    let xhr = new XMLHttpRequest();
+                    xhr.open('GET', "/test/headad.txt");
+                    xhr.onload = function () {
+                        if (xhr.status%400>100 && xhr.responseText != ""){
+                            document.getElementById("headad").innerHTML = xhr.responseText
+                            document.getElementById("headad").parentElement.classList.remove("disabled")
+                        }
+                    }
+                    xhr.overrideMimeType('text/html; charset=Shift_JIS')
+                    xhr.send();
+                })()
+            </script>
+        </div>
     </div>
     <div class="list" id="thread_list">
     </div>
     <div class="list">
-        <div class="box foot" id="writing_area">
-            
+        <div class="box foot disabled">
+            <div id="putad" style="margin: 0 auto;width: fit-content;"></div>
+            <script>
+                (function(){
+                    let xhr = new XMLHttpRequest();
+                    xhr.open('GET', "/test/putad.txt");
+                    xhr.onload = function () {
+                        if (xhr.status%400>100 && xhr.responseText != ""){
+                            document.getElementById("putad").innerHTML = xhr.responseText
+                            document.getElementById("putad").parentElement.classList.remove("disabled")
+                        }
+                    }
+                    xhr.overrideMimeType('text/html; charset=Shift_JIS')
+                    xhr.send();
+                })()
+            </script>
         </div>
-        <a href="./"><b>ホーム</b></a>
+        <div class="box foot" id="writing_area">
+        </div>
+        <b><a href="./" style="white-space: nowrap;">ホーム</a></b>
     </div>
     <div style="margin:2rem auto;width: fit-content;">Copyright:u-haru@u-haru.com All Rights Reserved</div>
 </body>
