--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -1,12 +1,14 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-    <title>適当な板</title>
     <meta charset="Shift_JIS">
+    <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+    <title>適当な板</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7258478194483080" crossorigin="anonymous"></script>
+    <!-- Put some header here -->
+    
+    <!-- Put some header here -->
 </head>
-
 <body>
     <noscript>
         この掲示板はJavascriptを使用しています<br>
@@ -278,5 +280,4 @@
         display: none;
     }
 </style>
-
 </html>
