--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -1,282 +1,226 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="Shift_JIS">
-    <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-    <title>適当な板</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0">
+	<meta charset="Shift_JIS">
+	<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+	<title>適当な板</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0">
+	<script src="./index.js" defer></script>
 </head>
 <body>
-    <noscript>
-        この掲示板はJavascriptを使用しています<br>
-        専用ブラウザの使用を推奨しています<br>
-    </noscript>
-    <div class="list">
-        <div class="box head" id="thread_catalog">
-            <h2 class="common" id="title"><script>document.getElementById("title").innerHTML = document.title</script></h2>
-            <div class="menu" id="head">
-                <script>
-                    (function(){
-                        let xhr = new XMLHttpRequest();
-                        xhr.open('GET', "./head.txt");
-                        xhr.onload = function () {
-                            document.getElementById("head").innerHTML = xhr.responseText
-                        }
-                        xhr.overrideMimeType('text/html; charset=Shift_JIS')
-                        xhr.send();
-                    })()
-                </script>
-            </div>
-        </div>
-        <div class="box head" id="thread_catalog">
-            <div class="common">この板の主なスレッド</div>
-            <div class="menu" id="thread_menu">
-            </div>
-        </div>
-        <div class="box foot disabled">
-            <div id="headad" style="margin: 0 auto;width: fit-content;"></div>
-            <script>
-                (function(){
-                    let xhr = new XMLHttpRequest();
-                    xhr.open('GET', "/test/headad.txt");
-                    xhr.onload = function () {
-                        if (xhr.status%400>100 && xhr.responseText != ""){
-                            document.getElementById("headad").innerHTML = xhr.responseText
-                            document.getElementById("headad").parentElement.classList.remove("disabled")
-                        }
-                    }
-                    xhr.overrideMimeType('text/html; charset=Shift_JIS')
-                    xhr.send();
-                })()
-            </script>
-        </div>
-    </div>
-    <div class="list" id="thread_list">
-    </div>
-    <div class="list">
-        <div class="box foot disabled">
-            <div id="putad" style="margin: 0 auto;width: fit-content;"></div>
-            <script>
-                (function(){
-                    let xhr = new XMLHttpRequest();
-                    xhr.open('GET', "/test/putad.txt");
-                    xhr.onload = function () {
-                        if (xhr.status%400>100 && xhr.responseText != ""){
-                            document.getElementById("putad").innerHTML = xhr.responseText
-                            document.getElementById("putad").parentElement.classList.remove("disabled")
-                        }
-                    }
-                    xhr.overrideMimeType('text/html; charset=Shift_JIS')
-                    xhr.send();
-                })()
-            </script>
-        </div>
-        <div class="box foot" id="writing_area">
-        </div>
-        <b><a href="./" style="white-space: nowrap;">ホーム</a></b>
-    </div>
-    <div style="margin:2rem auto;width: fit-content;">Copyright:u-haru@u-haru.com All Rights Reserved</div>
+	<noscript>
+		この掲示板はJavascriptを使用しています<br>
+		専用ブラウザの使用を推奨しています<br>
+	</noscript>
+	<div class="list">
+		<div class="box head" id="thread_catalog">
+			<h2 class="common" id="title"><script>document.getElementById("title").innerHTML = document.title</script></h2>
+			<div class="menu" id="head">
+				<script async>
+					(function(){
+						let xhr = new XMLHttpRequest();
+						xhr.open('GET', "./head.txt");
+						xhr.onload = function () {
+							document.getElementById("head").innerHTML = xhr.responseText
+						}
+						xhr.overrideMimeType('text/html; charset=Shift_JIS')
+						xhr.send();
+					})()
+				</script>
+			</div>
+		</div>
+		<div class="box head" id="thread_catalog">
+			<div class="common">この板の主なスレッド</div>
+			<div class="menu" id="thread_menu">
+			</div>
+		</div>
+		<div class="box foot disabled">
+			<div id="headad" style="margin: 0 auto;width: fit-content;"></div>
+            <script async>
+				(function(){
+					let xhr = new XMLHttpRequest();
+					xhr.open('GET', "/test/headad.txt");
+					xhr.onload = function () {
+						if (xhr.status%400>100 && xhr.responseText != ""){
+							document.getElementById("headad").innerHTML = xhr.responseText
+							document.getElementById("headad").parentElement.classList.remove("disabled")
+						}
+					}
+					xhr.overrideMimeType('text/html; charset=Shift_JIS')
+					xhr.send();
+				})()
+			</script>
+		</div>
+	</div>
+	<div class="list" id="thread_list">
+	</div>
+	<div class="list">
+		<div class="box foot disabled">
+			<div id="putad" style="margin: 0 auto;width: fit-content;"></div>
+			<script async>
+				(function(){
+					let xhr = new XMLHttpRequest();
+					xhr.open('GET', "/test/putad.txt");
+					xhr.onload = function () {
+						if (xhr.status%400>100 && xhr.responseText != ""){
+							document.getElementById("putad").innerHTML = xhr.responseText
+							document.getElementById("putad").parentElement.classList.remove("disabled")
+						}
+					}
+					xhr.overrideMimeType('text/html; charset=Shift_JIS')
+					xhr.send();
+				})()
+			</script>
+		</div>
+		<div class="box foot" id="writing_area">
+		</div>
+		<b><a href="./" style="white-space: nowrap;">ホーム</a></b>
+	</div>
+	<div style="margin:2rem auto;width: fit-content;">Copyright:u-haru@u-haru.com All Rights Reserved</div>
 </body>
-<script>
-    function getdat(dat,toppage) {
-        let xhr = new XMLHttpRequest();
+<script defer>
+	window.addEventListener("load",()=>{
+		const searchParams = new URLSearchParams(window.location.search);
+		const spl = location.pathname.split("/")
+		const bbs = spl[spl.length-2]
+		const writing_area = document.getElementById("writing_area")
+		const thread_list = document.getElementById("thread_list")
+		const thread_menu = document.getElementById("thread_menu")
+		let key = searchParams.get("key")
 
-        let list = document.getElementById("thread_list")
-
-        let key = dat.toString().split(".")[0]
-        xhr.open('GET', "./dat/" + dat, false);
-        xhr.onload = function () {
-            let datas = xhr.responseText.split("\n")
-            let thread = { "title": "", "res": [] }
-            datas.forEach(data => {
-                if (data != "") {
-                    let tmp = data.split("<>")
-                    tmp[3] = tmp[3].replace(/&gt;&gt;([0-9]+)(?![-\d])/i, `<a href="#${key}_$1">&gt;&gt;$1</a>`)
-                    tmp[3] = tmp[3].replace(/&gt;&gt;([0-9]+)\-([0-9]+)/i, `<a href="#${key}_$1">&gt;&gt;$1</a>-<a href="#${key}_$2">&gt;&gt;$2</a>`)
-                    tmp[3] = tmp[3].replace(/([a-z]+:\/\/[!-z]*)/i, `<a href="$1">$1</a>`)
-                    thread.res.push({ "from": tmp[0], "mail": tmp[1], "date_id": tmp[2], "message": tmp[3] })
-                    if (tmp[4]) {
-                        thread.title = tmp[4]
-                    }
-                }
-            });
-            let addres = (res, i) => {
-                let dl = `<dt class="header" id="${key}_${i}">${i}<span class="name">${res.from}</span>${res.mail ? `<span class="mail">${res.mail}</span>` : ""}${res.date_id}</dt>`
-                dl += `<dd class="res">${res.message}</dd>`
-                return dl
-            }
-
-            let dl = `<dl class="box thread" id="${key}">`
-            dl += `<dt class="title">${thread.title}</dt>`
-            if (thread.res.length > 10 && toppage) {
-                dl += addres(thread.res[0], 1)
-                thread.res.slice(-9).forEach((res, i) => {
-                    dl += addres(res, thread.res.length - 8 + i)
-                })
-            } else {
-                thread.res.forEach((res, i) => {
-                    dl += addres(res, i + 1)
-                })
-            }
-            if(toppage){
-                dl += "<hr>"
-                dl += postarea(key)
-            }
-            list.insertAdjacentHTML('beforeend', dl);
-        };
-        xhr.send();
-    }
-    function postarea(key){
-        const spl = location.pathname.split("/")
-        const bbs = spl[spl.length-2]
-        return `<div class="common">${key?"書き込み欄":"新規スレッド作成"}</div>
-            <div style="margin: 0.5em 2em; font-size: 0.75em;">
-                <form method="POST" action="/test/bbs.cgi" accept-charset="Shift-JIS">
-                    <input type="submit" value="${key?"書き込み":"新規スレッド"}"><br>
-                    ${!key?`<div>スレッドタイトル：<input type="text" name="subject" style="width: 24em;"></div>`:""}
-                    <div>
-                        <div style="display:inline-block">名前：<input type="text" name="FROM" style="width: 16em;"></div>
-                        <div style="display:inline-block">E-mail：<input type="text" name="mail" style="width: 16em;"></div>
-                    </div>
-                    <textarea style="width: 40em; height: 10.0em; word-wrap: break-word;" rows="4" cols="12"
-                        name="MESSAGE"></textarea>
-                    <input type="hidden" name="bbs" value="${bbs}">
-                    ${key?`<input type="hidden" name="key" value="${key}">`:""}
-                </form>
-            </div>`
-    }
-    window.onload = () => {
-        let searchParams = new URLSearchParams(window.location.search);
-        let bbs = location.pathname.split("/")[1]
-
-        if (searchParams.has("key")) {
-            let key = searchParams.get("key")
-            getdat(searchParams.get("key") + ".dat")
-            Array.from(document.getElementsByClassName("head")).forEach(e=>{e.classList.add("disabled")})
-            document.getElementById("writing_area").insertAdjacentHTML('beforeend', postarea(key))
-        } else {
-            document.getElementById("writing_area").insertAdjacentHTML('beforeend', postarea())
-            let xhr = new XMLHttpRequest();
-            let menu = document.getElementById("thread_menu")
-            xhr.open('GET', './subject.txt');
-            xhr.onload = function () {
-                let datas = xhr.responseText.split("\n")
-                let threads = []
-                datas.forEach((data, i) => {
-                    if (data != "") {
-                        let tmp = data.split("<>")
-                        let dat = tmp[0]
-                        getdat(dat,true)
-                        let key = dat.split('.')[0]
-                        menu.insertAdjacentHTML('beforeend', `<p class="menu_content"><a href="?key=${key}">${i + 1}:</a> <a href="#${key}">${tmp[1]}</a></p>`);
-                    }
-                });
-            };
-            xhr.send();
-        }
-    }
+		if (key) {
+			let dl = createElementFromHTML(`<dl class="box thread" id="${key}"></dl>`)
+			getdat(key,dat=>{
+				dl.innerHTML = parsedat(key,dat,-1)
+			})
+			thread_list.insertAdjacentElement("beforeend",dl)
+			Array.from(document.getElementsByClassName("head")).forEach(e => { e.classList.add("disabled") })
+		} else {
+			loadsubs((datas)=>{
+				/**@type {Array<HTMLElement>} */
+				let threads = []
+				datas.forEach((data,i)=>{
+					if (data != "") {
+						let tmp = data.split("<>")
+						let dat = tmp[0]
+						let key = dat.split('.')[0]
+						let dl = createElementFromHTML(`<dl class="box thread" id="${key}"></dl>`)
+						threads.push(dl)
+						thread_list.insertAdjacentElement("beforeend",dl)
+						thread_menu.insertAdjacentHTML('beforeend', `<p class="menu_content"><a href="?key=${key}">${i + 1}:</a> <a href="#${key}">${tmp[1]}</a></p>`);
+					}
+				})
+				threads.forEach(dl=>{
+					getdat(dl.id,dat=>{
+						dl.innerHTML = parsedat(key,dat,10) + "<hr>" + postarea(bbs,key)
+					})
+				})
+			})
+		}
+		writing_area.insertAdjacentHTML('beforeend', postarea(bbs,key))
+	})
 </script>
 <style>
-    * {
-        max-width: 100%;
-        margin: 0;
-    }
-    html{
-        font-size: 62.5%;
-    }
-    body {
-        background-image: url("./ba.gif");
-        margin: 0;
-        font-size: 1.6rem;
-    }
+	* {
+		max-width: 100%;
+		margin: 0;
+	}
+	html{
+		font-size: 62.5%;
+	}
+	body {
+		background-image: url("./ba.gif");
+		margin: 0;
+		font-size: 1.6rem;
+	}
 
-    .list {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 95%;
-        margin: 0 auto;
-    }
+	.list {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 95%;
+		margin: 0 auto;
+	}
 
-    .thread {
-        background-color: #EFEFEF;
-    }
+	.thread {
+		background-color: #EFEFEF;
+	}
 
-    .head {
-        background: #CFC;
-    }
+	.head {
+		background: #CFC;
+	}
 
-    .foot {
-        background: #CFC;
-    }
+	.foot {
+		background: #CFC;
+	}
 
-    .box {
-        width: 100%;
-        margin: 0.5em 0;
-        padding: 0.5em;
-        border-radius: 0.5em / 0.5em;
-        border: 1px solid #000;
-        box-sizing: border-box;
-        overflow-wrap: break-word;
-    }
+	.box {
+		width: 100%;
+		margin: 0.5em 0;
+		padding: 0.5em;
+		border-radius: 0.5em / 0.5em;
+		border: 1px solid #000;
+		box-sizing: border-box;
+		overflow-wrap: break-word;
+	}
 
-    .menu {
-        margin: 0.5em 0;
-        border-top: 0.5em solid #BEB;
-        padding-left: 0.5em;
-        border-bottom: 0.5em solid #BEB;
-        border-radius: 0.5em / 0.5em;
-        max-height: 15em;
-        word-wrap: break-word;
-        overflow-y: scroll;
-        background: #BEB;
-    }
+	.menu {
+		margin: 0.5em 0;
+		border-top: 0.5em solid #BEB;
+		padding-left: 0.5em;
+		border-bottom: 0.5em solid #BEB;
+		border-radius: 0.5em / 0.5em;
+		max-height: 15em;
+		word-wrap: break-word;
+		overflow-y: scroll;
+		background: #BEB;
+	}
 
-    .menu_content {
-        margin: 0;
-        padding: 0;
-        font-size: 0.75em;
-    }
+	.menu_content {
+		margin: 0;
+		padding: 0;
+		font-size: 0.75em;
+	}
 
-    .title {
-        font-size: 1.5em;
-        color: red;
-        margin-bottom: 0.7em;
-    }
+	.title {
+		font-size: 1.5em;
+		color: red;
+		margin-bottom: 0.7em;
+	}
 
-    .name {
-        color: green;
-        font-weight: bold;
-        margin-right: 0.5em;
-        margin-left: 0.5em;
-    }
+	.name {
+		color: green;
+		font-weight: bold;
+		margin-right: 0.5em;
+		margin-left: 0.5em;
+	}
 
-    .mail {
-        margin-right: 0.5em;
-    }
+	.mail {
+		margin-right: 0.5em;
+	}
 
-    .header {
-        margin: 0;
-        padding: 0;
-        font-size: 1.00em;
-    }
+	.header {
+		margin: 0;
+		padding: 0;
+		font-size: 1.00em;
+	}
 
-    .res {
-        margin-bottom: 1em;
-        margin-inline-start: 1em;
-    }
+	.res {
+		margin-bottom: 1em;
+		margin-inline-start: 1em;
+	}
 
-    .common {
-        padding: 0.5em;
-        border-radius: 0.50em / 0.50em;
-        background: #39F;
-        color: #FFF;
-        display: inline-block;
-    }
+	.common {
+		padding: 0.5em;
+		border-radius: 0.50em / 0.50em;
+		background: #39F;
+		color: #FFF;
+		display: inline-block;
+	}
 
-    .disabled{
-        display: none;
-    }
+	.disabled{
+		display: none;
+	}
 </style>
 
 </html>
