--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -16,7 +16,7 @@
 		<div class="box head" id="thread_catalog">
 			<h2 class="common" id="title"><script>document.getElementById("title").innerHTML = document.title</script></h2>
 			<div class="menu" id="head">
-				<script async>
+				<script defer>
 					(function(){
 						let xhr = new XMLHttpRequest();
 						xhr.open('GET', "./head.txt");
@@ -36,7 +36,7 @@
 		</div>
 		<div class="box foot disabled">
 			<div id="headad" style="margin: 0 auto;width: fit-content;"></div>
-            <script async>
+            <script defer>
 				(function(){
 					let xhr = new XMLHttpRequest();
 					xhr.open('GET', "/test/headad.txt");
@@ -57,7 +57,7 @@
 	<div class="list">
 		<div class="box foot disabled">
 			<div id="putad" style="margin: 0 auto;width: fit-content;"></div>
-			<script async>
+			<script defer>
 				(function(){
 					let xhr = new XMLHttpRequest();
 					xhr.open('GET', "/test/putad.txt");
