--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -16,8 +16,8 @@
 		<div class="box head" id="thread_catalog">
 			<h2 class="common" id="title"><script>document.getElementById("title").innerHTML = document.title</script></h2>
 			<div class="menu" id="head">
-				<script defer>
-					(function(){
+				<script>
+					window.addEventListener(()=>{
 						let xhr = new XMLHttpRequest();
 						xhr.open('GET', "./head.txt");
 						xhr.onload = function () {
@@ -25,19 +25,18 @@
 						}
 						xhr.overrideMimeType('text/html; charset=Shift_JIS')
 						xhr.send();
-					})()
+					})
 				</script>
 			</div>
 		</div>
 		<div class="box head" id="thread_catalog">
 			<div class="common">この板の主なスレッド</div>
-			<div class="menu" id="thread_menu">
-			</div>
+			<div class="menu" id="thread_menu"></div>
 		</div>
 		<div class="box foot disabled">
 			<div id="headad" style="margin: 0 auto;width: fit-content;"></div>
-            <script defer>
-				(function(){
+			<script>
+				window.addEventListener(()=>{
 					let xhr = new XMLHttpRequest();
 					xhr.open('GET', "/test/headad.txt");
 					xhr.onload = function () {
@@ -48,7 +47,7 @@
 					}
 					xhr.overrideMimeType('text/html; charset=Shift_JIS')
 					xhr.send();
-				})()
+				})
 			</script>
 		</div>
 	</div>
@@ -57,8 +56,8 @@
 	<div class="list">
 		<div class="box foot disabled">
 			<div id="putad" style="margin: 0 auto;width: fit-content;"></div>
-			<script defer>
-				(function(){
+			<script>
+				window.addEventListener(()=>{
 					let xhr = new XMLHttpRequest();
 					xhr.open('GET', "/test/putad.txt");
 					xhr.onload = function () {
@@ -69,7 +68,7 @@
 					}
 					xhr.overrideMimeType('text/html; charset=Shift_JIS')
 					xhr.send();
-				})()
+				})
 			</script>
 		</div>
 		<div class="box foot" id="writing_area">
@@ -78,7 +77,7 @@
 	</div>
 	<div style="margin:2rem auto;width: fit-content;">Copyright:u-haru@u-haru.com All Rights Reserved</div>
 </body>
-<script defer>
+<script>
 	window.addEventListener("load",()=>{
 		const searchParams = new URLSearchParams(window.location.search);
 		const spl = location.pathname.split("/")
@@ -104,7 +103,7 @@
 						let tmp = data.split("<>")
 						let dat = tmp[0]
 						let key = dat.split('.')[0]
-						let dl = createElementFromHTML(`<dl class="box thread" id="${key}"></dl>`)
+						let dl = createElementFromHTML(`<dl class="box thread" id="${key}"><dt class="title">読み込み中</dt></dl>`)
 						threads.push(dl)
 						thread_list.insertAdjacentElement("beforeend",dl)
 						thread_menu.insertAdjacentHTML('beforeend', `<p class="menu_content"><a href="?key=${key}">${i + 1}:</a> <a href="#${key}">${tmp[1]}</a></p>`);
