背景読み込みの優先化

--- a/Server/tekitou/index.html
+++ b/Server/tekitou/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0">
 	<script src="./index.js" defer></script>
 </head>
-<body>
+<body style="background-image: url(./ba.gif)">
 	<noscript>
 		この掲示板はJavascriptを使用しています<br>
 		専用ブラウザの使用を推奨しています<br>
@@ -126,7 +126,6 @@
 		font-size: 62.5%;
 	}
 	body {
-		background-image: url("./ba.gif");
 		margin: 0;
 		font-size: 1.6rem;
 	}
